# cryptography_proj

./: Header.h  README.MD  README.txt  Tally_Official  adm  administrator.cpp  admistrator.c  main.cpp  sign.cpp  voto_plus_sig.key
Administrator/: CMakeCache.txt  CMakeLists.txt  Makefile  README_adm.txt  adm  administrator.cpp  cmake_install.cmake  root_ca.crt  root_ca.key  root_ca.srl  seg_cert.crt  seg_private.key  seg_publickey.pem  seg_req.csr  weight_1.txt  weight_2.txt  weight_3.txt
Administrator/Homomorphic_keys/: .~lock.galois.key#  SEAL_public.key  SEAL_secretkey.key
Administrator/root_CA/: admin_ca.key  admin_ca.srl  calamar_cert.crt  calamar_cert.csr  calamar_cert.key  calamar_cert.p12  mariana_cert.crt  mariana_cert.csr  mariana_cert.key  mariana_cert.p12  matilde_cert.crt  (+15 more)
Ballot/: .ballot.sh.swp  ballot.sh
Counter/: CMakeCache.txt  CMakeLists.txt  Makefile  READ_ME_counter.txt  checksum1.txt  checksum2.txt  checksum3.txt  cmake_install.cmake  counter  counter.cpp  counter.hpp  result.txt
Project1/: Project1.sln
TallyOfficial/: CMakeCache.txt  CMakeLists.txt  Makefile  READ_ME_tally.txt  cmake_install.cmake  n_candidates.txt  tally  tallyofficial.cpp  temp1.txt  temp2.txt  temp3.txt  vote1.txt  vote2.txt  vote3.txt  vote_sig.txt
Tally_Official/: admin_ca.crt
Voter1/: CMakeLists.txt  READ_ME_voter.txt  voter1.cpp
Voter2/: CMakeLists.txt  READ_ME_voter.txt  voter2.cpp
Voter3/: CMakeLists.txt  READ_ME_voter.txt  voter3.cpp
VoterApp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  voter  voter.cpp
mariana/: mariana_cert.p12
(+13 files in other folders)
